// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When a width is passed in 1`] = `
@media only screen and (min-width:740px) {
  .c0 {
    width: 20vw;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    min-width: 740px;
  }
}

@media only screen and (max-width:740px) {
  .c0 {
    margin-left: -1rem;
    margin-right: -1rem;
  }
}

<Image
  alt=""
  className="c0"
  fadeIn={true}
  width="20vw"
/>
`;

exports[`When no props are passed in 1`] = `
@media only screen and (min-width:740px) {
  .c0 {
    width: 80vw;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -ms-transform: translateX(-50%);
    transform: translateX(-50%);
    min-width: 740px;
  }
}

@media only screen and (max-width:740px) {
  .c0 {
    margin-left: -1rem;
    margin-right: -1rem;
  }
}

<Image
  alt=""
  className="c0"
  fadeIn={true}
/>
`;
